--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,14 @@
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# Ignore emacs temp files
+
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
