Switch to names for ac fields

--- a/config/authorities.yml
+++ b/config/authorities.yml
@@ -1,10 +1,6 @@
 development:	
-     "Library of Congress Subject Headings" : '/authorities/search/loc/subjects'
+     "Library of Congress Names" : '/authorities/search/loc/names'
      "FAST" : '/authorities/search/assign_fast/all'
 production:	
-     "Library of Congress Subject Headings" : '/authorities/search/loc/subjects'
+     "Library of Congress Names" : '/authorities/search/loc/names'
      "FAST" : '/authorities/search/assign_fast/all'
-     
-
-     
-
